--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,8 @@
-
- div {
+ div.con {
    width: 100%;
    height: 100%;
-   background-color: antiquewhite;
+   overflow: hidden;
  }
+:host {
+  color: white;
+}
