--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,39 @@
-<p>
-  login works!
-</p>
+<!-- <section>
+  <form (ngSubmit)=login(logForm) #logForm="ngForm">
+    <div>
+      <label for="email">E-mail</label>
+      <input ngModel type="email" name="email" id="email" required>
+
+      <label for="pass">Password</label>
+      <input ngModel type="password" name="pass" id="pass" required>
+
+      <button type="submit" [disabled]="logForm.invalid">Login</button>
+      <button type="button" [disabled]="" (click)="register(logForm)">Register</button>
+    </div>
+  </form>
+</section> -->
+<!-- <h1>Zapraszam do logowania</h1> -->
+<section>
+  <form class="example-form" (ngSubmit)=login(logForm) #logForm="ngForm">
+
+    <mat-form-field color="accent">
+      <mat-label>E-mail</mat-label>
+      <input ngModel matInput placeholder="" maxlength="20" type="email" name="email" id="email" required>
+      <mat-icon matSuffix>assignment_ind</mat-icon>
+      <!-- <mat-error *ngIf="">error</mat-error> -->
+    </mat-form-field>
+
+    <mat-form-field color="accent" >
+      <mat-label>Password</mat-label>
+      <input ngModel matInput placeholder="" maxlength="20" type="password" name="pass" id="pass" required>
+      <mat-icon matSuffix>lock_open</mat-icon>
+      <!-- <mat-error *ngIf="">error</mat-error> -->
+      <!-- <mat-hint align="start"><strong>Don't disclose personal info</strong> </mat-hint>
+    <mat-hint align="end">{{message.value.length}} / 256</mat-hint> -->
+    </mat-form-field>
+    <div>
+      <button mat-raised-button type="submit" [disabled]="logForm.invalid">Login</button>
+      <button mat-raised-button color="warn" [disabled]="" (click)="register(logForm)">Register</button>
+    </div>
+  </form>
+</section>
