--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -1,3 +1,7 @@
+:host {
+  color: white;
+}
+
 .con {
   display: flex;
   flex-flow: column nowrap;
@@ -5,8 +9,8 @@
 }
 
 .logo {
-  flex-grow: 1;
   display: flex;
+  flex-grow: 1;
   justify-content: center;
   align-items: center;
 }
@@ -19,7 +23,7 @@
   align-items: center;
 }
 
-.navigation>div {
+.navigation>div, .social>div {
   position: relative;
   color: #4d4d4e;
   width: 100%;
@@ -28,8 +32,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 0;
-  transition: all .4s linear;
+  transition: all .3s ease-in;
+  outline: 0;
 }
 
 .navigation>div:before {
@@ -40,10 +44,10 @@
   left: 50%;
   transform: translateX(-50%);
   font-size: .6em;
-  transition: all .4s ease-in;
+  transition: all .2s ease-in;
 }
 
-.navigation>div:hover {
+.navigation>div:hover, .social>div:hover {
   color: #eee;
   transform: scale(1.3);
 }
@@ -53,8 +57,17 @@
 }
 
 .social {
-  flex-grow: 1;
   display: flex;
+  flex-grow: 1;
   justify-content: center;
   align-items: center;
+  flex-flow: column nowrap;
+}
+
+.navigation>div.navactive {
+  color: #eee;
+}
+
+.navigation>div.logged {
+  color: #990000;
 }
