--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,37 +1,55 @@
 <div class="con">
-  <div class="logo" routerLink="/home">Logo</div>
-  <div class="navigation">
+  <div class="logo" routerLink="/login">
+    <img src="./../../assets/shande.jpg" alt="Marcin Cyboran portfolio"></div>
+  <div class="navigation hidden" #menu>
+
     <div routerLink="/home" data-name="HOME" routerLinkActive="navactive">
       <mat-icon>supervised_user_circle</mat-icon>
     </div>
+
     <div routerLink="/portfolio" data-name="WORK" routerLinkActive="navactive">
       <mat-icon class="material-icons md-36">web</mat-icon>
     </div>
+
     <div routerLink="/skills" data-name="SKILLS" routerLinkActive="navactive">
       <mat-icon>settings</mat-icon>
     </div>
+
     <div routerLink="/blog" data-name="BLOG" routerLinkActive="navactive">
       <mat-icon>chrome_reader_mode</mat-icon>
     </div>
+
     <div routerLink="/cv" data-name="CV" routerLinkActive="navactive">
       <mat-icon>fingerprint</mat-icon>
     </div>
+
     <div routerLink="/contact" data-name="CONTACT" routerLinkActive="navactive">
       <mat-icon>mail_outline</mat-icon>
     </div>
+
     <div data-name="LOGOUT" *ngIf="auth.user" (click)="logout()" class="logged">
       <mat-icon>exit_to_app</mat-icon>
     </div>
+
     <div data-name="PANEL" *ngIf="auth.user" (click)="adminPanel()" routerLinkActive="navactive" class="logged">
       <mat-icon>edit</mat-icon>
     </div>
+
+    <div class="phone" (click)="showMenuPhone(menu)">
+      <mat-icon>menu</mat-icon>
+    </div>
+
   </div>
+
   <div class="social">
+
     <div>
       <i class="fab fa-github"></i>
     </div>
+
     <div>
       <i class="fab fa-facebook-square"></i>
     </div>
+
   </div>
 </div>
