--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -1,67 +1,69 @@
-:host {
-  color: white;
-}
-
 .con {
   display: flex;
-  flex-flow: column nowrap;
+  flex-flow: row nowrap;
   height: 100%;
 }
 
 .logo {
+  flex: 0 0 64px;
   display: flex;
-  flex-grow: 1;
   justify-content: center;
   align-items: center;
+  padding: 10px;
+}
+
+.logo > img {
+  max-width: 100%;
+  border-radius: 50%;
+  /* border: 1px solid #eee; */
 }
 
 .navigation {
-  flex-grow: 5;
+  flex: 5 0 0px;
   display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
+  flex-flow: row nowrap;
+  justify-content: space-around;
+  align-items: stretch;
+  text-shadow: 0px 0px 10px rgb(0, 0, 0);
+
 }
 
-.navigation>div, .social>div {
+.navigation>div {
+  flex: 1 1 0px;
   position: relative;
   color: #4d4d4e;
-  width: 100%;
-  height: 48px;
   cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: all .3s ease-in;
+  transition: all .2s linear;
   outline: 0;
 }
 
-.navigation>div:before {
-  opacity: 0;
-  content: attr(data-name);
-  position: absolute;
-  top: 70%;
-  left: 50%;
-  transform: translateX(-50%);
-  font-size: .6em;
-  transition: all .2s ease-in;
-}
-
-.navigation>div:hover, .social>div:hover {
+.navigation>div:hover:not(.phone) {
   color: #eee;
   transform: scale(1.3);
+  transform: translateY(-10%);
+  font-size: 1.2em;
 }
 
-.navigation>div:hover:before {
+.navigation>div:before {
+  content: attr(data-name);
+  font-size: .6em;
+  opacity: 0;
+  position: absolute;
+  top: 65%;
+  left: 50%;
+  transform: translateX(-50%);
+  transition: all .2s linear;
+}
+
+.navigation>div:hover::before {
   opacity: 1;
 }
 
 .social {
-  display: flex;
-  flex-grow: 1;
-  justify-content: center;
-  align-items: center;
-  flex-flow: column nowrap;
+  display: none;
 }
 
 .navigation>div.navactive {
@@ -70,4 +72,130 @@
 
 .navigation>div.logged {
   color: #990000;
+}
+
+.navigation div.phone {
+  display: none;
+
+}
+
+@media screen and (min-width: 480px) {
+  .con {
+    display: flex;
+    flex-flow: column nowrap;
+    height: 100%;
+  }
+  .logo {
+    flex: 0 0 96px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .navigation {
+    flex: 5 0 0px;
+
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+  }
+  .navigation>div,
+  .social>div {
+    flex: 0 0 48px;
+    position: relative;
+    color: #4d4d4e;
+    width: 100%;
+    cursor: pointer;
+    outline: 0;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    transition: all .2s linear;
+    transform: scale(1);
+  }
+  .navigation>div:before {
+    opacity: 0;
+    content: attr(data-name);
+    position: absolute;
+    top: 70%;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: .6em;
+    transition: all .2s linear;
+  }
+  .navigation>div:hover,
+  .social>div:hover {
+    color: #eee;
+    transform: scale(1.3);
+    font-size: 1em;
+    transform: translateX(10%);
+  }
+
+  .navigation>div:hover:before {
+    opacity: 1;
+  }
+
+  .social {
+    display: flex;
+    flex-grow: 1;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column nowrap;
+  }
+
+  .navigation>div.navactive {
+    color: #eee;
+  }
+
+  .navigation>div.logged {
+    color: #990000;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .con {
+
+  }
+  .logo {
+    color: red;
+  }
+  .navigation {
+    position: absolute;
+    top: 64px;
+    display: flex;
+    height: 64px;
+    width: 100%;
+    background-color: #181818;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+  }
+  .navigation > div {
+    height: 100%;
+  }
+
+  .navigation > div.phone {
+    position: fixed;
+    top: 0;
+    right: 0;
+    display: flex;
+    max-height: 64px;
+    width: 64px;
+    justify-content: center;
+    align-items: center;
+    transition: max-height .5s linear;
+  }
+
+  .navigation.hidden {
+    max-height: 0;
+  }
+
+  .navigation>div:hover.phone {
+    transform: scale(1.3);
+    color: #eee;
+    font-size: 1.2em;
+  }
 }
