So many problems1

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,8 @@
 
 section {
   display: flex;
-  flex-flow: column wrap;
-  height: 100vh;
+  flex-flow: column nowrap;
+  min-height: 100vh;
   overflow: hidden;
   color: white;
 }
@@ -17,32 +17,25 @@ section > nav {
 section > main {
   flex: 1 1 0px;
   background-color: #252627;
-  overflow: hidden;
+  overflow: auto;
+  min-height: 0;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   section {
     display: flex;
     flex-flow: row wrap;
-    /* height: 100vh; */
-    /* overflow: hidden; */
-  }
-
-  section > nav {
-    /* flex: 0 0 64px; */
-    /* background-color: #181818; */
-    min-height: 600px;
+    height: 100vh;
+    overflow: auto;
   }
 
   section > main {
-    /* flex: 1 1 1px; */
-    /* background-color: #252627; */
-    /* overflow: hidden; */
+    min-height: 0;
+    overflow: auto;
   }
+
 }
 
 @media screen and (max-width: 380px) {
-  section > main {
-    /* margin-top: 64px; */
-  }
+
 }
