--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -1,3 +1,130 @@
-:host {
-  color: white;
+.contactContainer {
+  display: flex;
+  min-height: calc(100vh - 64px);
+  flex-flow: column nowrap;
+}
+
+.contactContainer>div {
+  flex: 1 0 calc(50vh - 32px);
+  position: relative;
+}
+
+.one {}
+
+.two {}
+
+.one:before,
+.one:after {
+  position: absolute;
+  left: 2%;
+  font-family: 'Pacifico', cursive;
+  font-style: italic;
+  font-size: 1em;
+  color: rgba(166, 166, 166, 0.2);
+}
+
+.one:before {
+  content: '<body>';
+  top: 5%;
+}
+
+.one:after {
+  content: '</body>';
+  bottom: 5%;
+}
+
+#formWrapper>h1 {
+  font-size: 2em;
+  font-family: 'Roboto', sans-serif;
+  font-style: italic;
+  font-weight: bold;
+}
+
+#formWrapper>h1:before,
+#formWrapper>h1:after {
+  font-family: 'Pacifico', cursive;
+  font-style: italic;
+  font-size: .5em;
+  color: rgba(166, 166, 166, 0.2);
+  display: block;
+  margin: 10px;
+  margin-left: -20px;
+}
+
+#formWrapper>h1:before {
+  content: '<h1>'
+}
+
+#formWrapper>h1:after {
+  content: '</h1>'
+}
+
+#formWrapper {
+  margin: 75px auto;
+  position: static;
+  max-width: 80%;
+}
+
+#formWrapper div.formRow {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  /* padding: 10px; */
+}
+
+#formWrapper div.formRow mat-form-field {
+  width: 48%;
+}
+
+form button {
+  padding: 10px;
+  margin-top: 20px;
+}
+
+.contactForm {
+  display: flex;
+  flex-flow: column nowrap;
+  width: 100%;
+  margin: 0 auto;
+}
+
+#map {
+  width: 100%;
+  height: calc(50vh - 32px);
+}
+
+@media screen and (max-width: 380px) {
+  #formWrapper {
+    max-width: 90%;
+  }
+  #formWrapper>h1:before,
+  #formWrapper>h1:after {
+    margin-left: 0px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .contactContainer {
+    height: 100%;
+    flex-flow: row nowrap;
+    overflow: auto;
+  }
+  .contactContainer>div {
+    flex: 1 1;
+  }
+  #formWrapper {
+    margin-top: 75px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    max-width: 80%;
+  }
+  #map {
+    width: 100%;
+    height: 100%;
+  }
+  .one:before,
+  .one:after {
+    left: 5%;
+  }
 }
