--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,30 @@
-<div class="con">
-home
-</div>
+<!-- <div class="half"> -->
 
+  <div class="intro">
+    <h1>Zostań na chwilę i posłuchaj.</h1>
+    <p> Portfolio powstało jako projekt zaliczeniowy kierunku Programista Front-End z Angular - WSB </p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo adipisci, obcaecati molestias numquam maxime commodi inventore
+      sunt dolores id ad perspiciatis facilis. Earum natus impedit maiores magni corrupti, ratione dicta. Laborum officiis
+      eum quidem laboriosam in facere voluptates possimus vel ea iusto fuga doloremque nisi impedit dolorem beatae dolorum
+      reiciendis sint quas dignissimos delectus, voluptas dicta ex. Est, quaerat sit!</p>
+    <div class="list-wrapper">
+      <h2>Wykorzystane technologie:</h2>
+      <ul>
+        <li><img src="./../../assets/html.png" alt="HTML5"></li>
+        <li><img src="./../../assets/css3.png" alt="CSS#"></li>
+        <li><img src="./../../assets/js.png" alt="JAVASCRIPT"></li>
+        <li><img src="./../../assets/npm.png" alt="NPM"></li>
+        <li><img src="./../../assets/angular.png" alt="ANGULAR2++"></li>
+        <li><img src="./../../assets/ts.png" alt="TYPESCRIPT"></li>
+        <li><img src="./../../assets/maps.png" alt="TYPESCRIPT"></li>
+        <li><img src="./../../assets/fb.png" alt="FIREBASE"></li>
+      </ul>
+    </div>
+  </div>
+
+<!-- </div> -->
+<!-- <div class="half">
+
+  <h1>hello</h1>
+
+</div> -->
