--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -79,7 +79,7 @@
 
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .con {
     display: flex;
     flex-flow: column nowrap;
@@ -172,6 +172,7 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    z-index: 100;
   }
   .navigation > div {
     height: 100%;
@@ -190,7 +191,7 @@
   }
 
   .navigation.hidden {
-    max-height: 0;
+    height: 0;
   }
 
   .navigation>div:hover.phone {
