--- a/src/styles.css
+++ b/src/styles.css
@@ -2,9 +2,23 @@
 
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import "~@angular/material/prebuilt-themes/pink-bluegrey.css";
+@import url('https://fonts.googleapis.com/css?family=Pacifico&subset=latin-ext');
+@import url('https://fonts.googleapis.com/css?family=Roboto&subset=latin-ext');
+
+/*
+font-family: 'Pacifico', cursive;
+font-family: 'Roboto', sans-serif;
+*/
+
+
+h1,h2,h3, p {
+  margin: 0;
+  padding: 0;
+}
 
 * {
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
 }
 
 *::after {
@@ -13,4 +27,27 @@
 
 *::before {
   box-sizing: border-box;
+}
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+  background: #252627;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 2px #252627;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #454647;
+  box-shadow: inset 0 0 2px #252627;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
