Working http-blog but failed css layout - end for today

--- a/src/app/admin-panel/admin-panel.component.html
+++ b/src/app/admin-panel/admin-panel.component.html
@@ -3,14 +3,14 @@
 
       <mat-form-field color="accent">
         <mat-label>Title</mat-label>
-        <input ngModel matInput placeholder="" maxlength="20" type="email" name="title" required>
+        <input ngModel matInput placeholder="" maxlength="20" type="text" name="title" required>
         <!-- <mat-icon matSuffix>assignment_ind</mat-icon> -->
         <!-- <mat-error *ngIf="">error</mat-error> -->
       </mat-form-field>
       <br>
       <mat-form-field color="accent" >
         <mat-label>img</mat-label>
-        <input ngModel matInput placeholder="" maxlength="20" type="password" name="img" required>
+        <input ngModel matInput placeholder="" type="text" name="img" required>
         <!-- <mat-icon matSuffix>lock_open</mat-icon> -->
         <!-- <mat-error *ngIf="">error</mat-error> -->
         <!-- <mat-hint align="start"><strong>Don't disclose personal info</strong> </mat-hint>
@@ -20,7 +20,7 @@
 
       <mat-form-field color="accent" >
           <mat-label>Text</mat-label>
-          <input ngModel matInput placeholder="" maxlength="20" type="password" name="text" required>
+          <input ngModel matInput placeholder="" maxlength="20" type="text" name="text" required>
           <!-- <mat-icon matSuffix>lock_open</mat-icon> -->
           <!-- <mat-error *ngIf="">error</mat-error> -->
           <!-- <mat-hint align="start"><strong>Don't disclose personal info</strong> </mat-hint>
@@ -32,3 +32,4 @@
       </div>
     </form>
   </section>
+
