new fixed nav and RWD, DB based post section and post:id component

--- a/src/app/blog/blog.component.css
+++ b/src/app/blog/blog.component.css
@@ -2,77 +2,101 @@
   height: 100%;
 }
 
-.blog-container {
-  max-width: 1140px;
-  min-width: 900px;
-  margin: 0 auto;
+.loading, .loadingError {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
 }
 
-.blog-container > h1 {
+.delete {
+  position: absolute;
+  transition: color .3s linear;
+  cursor: pointer;
+}
+
+.delete:hover {
+  color: #F44336
+}
+
+.current-post .delete {
+  top: 10px;
+  right: 10px;
+}
+
+.blog-container {
+  width: 100%;
+  padding: 10px;
+  /* min-width: 900px; */
+  margin: 0 auto;
+}
+.blog-container>h1 {
   text-align: center;
   padding: 50px 0;
 }
-
 .current-post {
-  padding: 40px;
+  position: relative;
+
+  padding: 10px;
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: column nowrap;
   background-color: rgba(255, 255, 255, .1);
   margin-bottom: 80px;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   border-radius: 10px;
   overflow: hidden;
 }
-
 .current-post-img {
-  flex: 0 0 35%;
-  background: url("./../../assets/123.jpg") center center/cover;
+  flex: 0 0 200px;
+  background-image: url("./../../assets/no-img.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
   max-height: 200px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+
 }
-
-
 .current-post-body {
   flex: 1 1 65%;
-  padding-left: 80px;
+  padding: 0px;
   position: relative;
 }
-
 .current-post-body .current-post-body-header,
 .current-post-body .current-post-body-date {
   margin-bottom: 20px;
   font-style: italic
-
 }
-
 .current-post-body .current-post-body-text {
   text-align: justify;
   line-height: 150%;
   padding-bottom: 60px;
 }
-
 .current-post-body .current-post-body-date {
   text-align: right;
 }
-
 .current-post-body .current-post-body-button {
   position: absolute;
   bottom: 0;
   right: 0;
   transition: all .3s ease-in-out;
 }
-
 .current-post-body .current-post-body-button:hover {
   transform: translateY(5px);
 }
-
 .others {
   display: flex;
-  flex-flow: row wrap;
+  flex-flow: column wrap;
   justify-content: space-between;
 }
-
+.other-post .delete {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
 .other-post {
-  flex: 0 0 30%;
+  position: relative;
+
+  flex: 0 0 48%;
   min-height: 200px;
   margin-bottom: 30px;
   background-color: rgba(255, 255, 255, .05);
@@ -80,23 +104,23 @@
   padding-bottom: 20px;
   border-radius: 10px;
   overflow: hidden;
-  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   transition: all 0.3s ease-in-out;
 }
 .other-post:hover {
   background-color: rgba(255, 255, 255, .15);
-
 }
 .other-post-img {
   height: 200px;
-  background: url("./../../assets/123.jpg") no-repeat center/cover;
-
+  background-image: url("./../../assets/no-img.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
-
 .other-post-body {
   position: relative;
 }
-
 .other-post-body .other-post-body-header {
   margin: 15px 0;
   /* text-indent: 1em; */
@@ -106,17 +130,129 @@
   margin-bottom: 10px;
   font-style: italic
 }
-
 .other-post-body .other-post-body-text {
   text-align: justify;
   overflow: hidden;
   margin-bottom: 20px;
   height: 150px;
 }
-
 .other-post-body .other-post-body-button {
   position: relative;
   left: 50%;
   transform: translateX(-50%);
   color: #fff;
+}
+
+@media screen and (min-width: 380px) {
+  .blog-container {
+    padding: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .blog-container {
+    max-width: 1140px;
+    margin: 0 auto;
+  }
+  .blog-container>h1 {
+    text-align: center;
+    padding: 50px 0;
+  }
+  .current-post {
+    padding: 40px;
+    display: flex;
+    flex-flow: row nowrap;
+    background-color: rgba(255, 255, 255, .1);
+    margin-bottom: 80px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    border-radius: 10px;
+    overflow: hidden;
+  }
+  .current-post-img {
+    flex: 0 0 35%;
+    margin: 0px;
+    background-image: url("./../../assets/no-img.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    max-height: 200px;
+  }
+  .current-post-body {
+    flex: 1 1 65%;
+    padding-left: 80px;
+    position: relative;
+  }
+  .current-post-body .current-post-body-header,
+  .current-post-body .current-post-body-date {
+    margin-bottom: 20px;
+    font-style: italic
+  }
+  .current-post-body .current-post-body-text {
+    text-align: justify;
+    line-height: 150%;
+    padding-bottom: 60px;
+  }
+  .current-post-body .current-post-body-date {
+    text-align: right;
+  }
+  .current-post-body .current-post-body-button {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    transition: all .3s ease-in-out;
+  }
+  .current-post-body .current-post-body-button:hover {
+    transform: translateY(5px);
+  }
+  .others {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+  }
+  .other-post {
+    flex: 0 0 30%;
+    min-height: 200px;
+    margin-bottom: 30px;
+    background-color: rgba(255, 255, 255, .05);
+    padding: 10px;
+    padding-bottom: 20px;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    transition: all 0.3s ease-in-out;
+  }
+  .other-post:hover {
+    background-color: rgba(255, 255, 255, .15);
+  }
+  .other-post-img {
+    height: 200px;
+    background-image: url("./../../assets/no-img.jpg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+  }
+  .other-post-body {
+    position: relative;
+  }
+  .other-post-body .other-post-body-header {
+    margin: 15px 0;
+    /* text-indent: 1em; */
+  }
+  .other-post-body .other-post-body-date {
+    text-align: right;
+    margin-bottom: 10px;
+    font-style: italic
+  }
+  .other-post-body .other-post-body-text {
+    text-align: justify;
+    overflow: hidden;
+    margin-bottom: 20px;
+    height: 150px;
+  }
+  .other-post-body .other-post-body-button {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    color: #fff;
+  }
 }
